Add services and hexagonal architecture

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@
 spring.application.name=accentureTest
 
 # Configuración de PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/gallocal
+spring.datasource.url=jdbc:postgresql://localhost:5432/accenture
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Puerto del servidor (opcional)
-server.port=8080
+server.port=8082
